--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,41 @@
 server {
     listen 80;
+    server_tokens off;
     client_max_body_size 10M;
 
+    # Обработка документации API
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    
-    location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-      }
 
+    # Обработка админки бэкенда
+    location /admin/ {
+        proxy_pass http://foodgram-back:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Обработка запросов API через бэкенд
+    location /api/ {
+        proxy_pass http://foodgram-back:8000/api/;  # Имя контейнера бэкенда
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /media/ {
+        alias /app/media/;
+    }
+
+    location /static/ {
+        alias /staticfiles/static/;
+    }
+
+    location / {
+        alias /staticfiles/;
+        index index.html index.htm;
+        try_files $uri /index.html;
+    }
 }
