--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 frontend/node_modules
-infra/frontend/build
+frontend/build
 .env
 
 # Byte-compiled / optimized / DLL files
@@ -140,3 +140,4 @@ dmypy.json
 
 static/
 media/
+.qodo
