--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,8 +3,16 @@ server {
     server_tokens off;
     client_max_body_size 10M;
 
+    location /static/ {
+        alias /staticfiles/static/;
+    }
+
+    location /media/ {
+        alias /app/media/;
+    }
+
     # Обработка документации API
-    location /api/docs/ {
+    location /docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
@@ -19,18 +27,10 @@ server {
 
     # Обработка запросов API через бэкенд
     location /api/ {
-        proxy_pass http://foodgram-back:8000/api/;  # Имя контейнера бэкенда
+        proxy_pass http://foodgram-back:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /media/ {
-        alias /app/media/;
-    }
-
-    location /static/ {
-        alias /staticfiles/static/;
     }
 
     location / {
