--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       with:
         context: ./backend/
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-backend:latest
 
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
@@ -62,7 +62,7 @@ jobs:
       with:
         context: ./frontend/
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
 
   deploy:
     name: Deploy Foodgram
