--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
       with:
         context: ./frontend/
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
 
   deploy:
     name: Deploy Foodgram
