--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-POSTGRES_DB=kittygram
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
-DB_NAME=kittygram
+POSTGRES_DB=postgress_db
+POSTGRES_USER=postgress_user
+POSTGRES_PASSWORD=postgress_password
+DB_NAME=postgress_db
 DB_HOST=db
 DB_PORT=5432
 SECRET_KEY=django-insecure-cg6*%6d51ef8f#4!r3*$vmxm4)abgjw8mo!4y-q*uq1!4$-89$
-DEBUG=False
-ALLOWED_HOSTS=kittygram-161.zapto.org,12.88.110.27
+DEBUG=True
+ALLOWED_HOSTS=127.0.0.1,0.0.0.0
